<resources>
    <string name="app_name">bipo</string>
    <string name="str_cd_barlogo">BarLogo</string>
    <string name="str_cd_wheellogo">wheelLogo</string>
    <string name="sr_txt_inicio_de_sesion">Inicio de sesion</string>
    <string name="divider">Divider</string>
    <string name="sr_txt_usuario">Usuario:</string>
    <string name="sr_txt_contrasena">Contraseña:</string>
    <string name="sr_btn_registrate">Regístrate</string>
    <string name="sr_btn_entrar">Entrar</string>
    <string name="sr_txt_olvidaste_tu_contrasena">¿Olvidaste tu contraseña?</string>
    <string name="sr_txt_iniciar_con">Iniciar con:</string>
    <string name="sr_btn_facebook">facebook</string>
    <string name="sr_btn_google">Google +</string>
    <string name="sr_btn_twitter">twitter</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sr_txt_informacin_personal">Información personal</string>
    <string name="sr_btn_cancelar">Cancelar</string>
    <string name="sr_txt_apellidos">Apellidos:</string>
    <string name="sr_txt_confirmar_contrasena">Confirmar contraseña:</string>
    <string name="sr_txt_correo">Correo:</string>
    <string name="sr_txt_cedula">Cédula:</string>
    <string name="sr_txt_fecha_de_nacimiento">Fecha de nacimiento:</string>
    <string name="sr_txt_nombres">Nombres:</string>
    <string name="sr_txt_numero_celular">Número celular:</string>
    <string name="sr_btn_siguiente">Siguiente</string>
    <string name="sr_txt_informacion_de_la_bicicleta">Información de la bicicleta</string>
    <string name="sr_txt_photo_button">Photo button</string>
    <string name="sr_txt_tipo">Tipo:</string>
    <string name="sr_txt_acepto_fotos">Acepto publicación de fotos.</string>
    <string name="sr_txt_acepto_terminos">Acepto terminos y condiciones.</string>
    <string name="sr_txt_caracteristicas">Caracteristicas:</string>
    <string name="sr_txt_color">Color:</string>
    <string name="sr_txt_confirmacion_del_id">Confirmación del Id:</string>
    <string name="sr_txt_id_del_marco">Id del marco:</string>
    <string name="sr_txt_marca">Marca:</string>
    <string name="sr_btn_registrar">Registrar</string>
    <string name="sr_btn_anterior">Anterior</string>
    <string name="sr_cd_loginwindow">loginWindow</string>
    <string name="sr_cd_wheel">wheel</string>
    <string name="sr_cd_ventana_redondeada" />
    <string name="sr_cd_bici1">Bicicleta 1</string>
    <string name="sr_btn_restaurar_contrasena">Restaurar contraseña</string>
    <string name="sr_txt_restaurarar_contrasena_text">Restauraremos tu contraseña por medio del correo electrónico.</string>
    <string name="sr_cd_boton_de_la_galeria">Boton de la galeria</string>
    <string name="sr_txt_nombre_bicicleta">Nombre de la bicicleta:</string>
    <string name="sr_btn_vi_esta_bibicleta">Ví esta bicicleta</string>
    <string name="sr_cd_bicicleta_reportada">Bicicleta reportada</string>
    <string name="sr_cd_sombra_ventana">Sombra de la ventana</string>
    <string name="sr_cd_boton_izquierdo_actionbar">Botón izquierdo del ActionBar</string>
    <string name="sr_cd_boton_derecho_actionbar">Botón derecho del ActionBar</string>
    <string name="sr_itmtxt_bike_name">Bicicleta: %s</string>
    <string name="sr_itmtxt_bike_brand">Marca: %s</string>
    <string name="sr_itmtxt_bike_type">Tipo: %s</string>
    <string name="sr_itmtxt_bike_color">Color: %s</string>
    <string name="sr_itmtxt_bike_idframe">IdMarco: %s</string>
    <string name="sr_itmtxt_bike_details">Detalles: %s</string>
    <string name="sr_itmtxt_bike_features">Caracteristicas: %s</string>
    <string name="sr_itmtxt_bike_id">Id: %s</string>
    <string name="sr_account_info_name">Nombres: %s</string>
    <string name="sr_account_info_last_name">Apellidos: %s</string>
    <string name="sr_account_info_email">Correo: %s</string>
    <string name="sr_account_info_document_id">Cédula: %s</string>
    <string name="sr_account_info_phone">Celular: %s</string>
    <string name="sr_facebook_app_id">374501632951706</string>
    <string name="sr_menu_home">Home</string>
    <string name="sr_menu_boton_panico">Botón de pánico</string>
    <string name="sr_menu_bicicletas_reportadas">Bicicletas reportadas</string>
    <string name="sr_menu_zonas_inseguras">Zonas inseguras</string>
    <string name="sr_menu_perfil">Perfil</string>
    <string name="sr_menu_sobre_bipo">Sobre bipo</string>
    <string name="sr_menu_cerrar_sesion">Cerrar sesión</string>
    <string name="sr_title_configuracion">Configuración</string>
    <string name="sr_sttgtitle_home_de_panico">Home de pánico</string>
    <string name="sr_sttg_description_homepanic">El botón de pánico estará en la ventana principal para un acceso más rápido.</string>
    <string name="sr_sttg_title_publicacion_fotos">Publicación de fotos</string>
    <string name="sr_sttg_description_publicacion_fotos">Evitar la publicación de fotos de la bicicleta en un reporte de robo.</string>
    <string name="sr_sttg_tittle_notificacion_correo">Notificación por correo</string>
    <string name="sr_sttg_description_notificacion_correo">Enviar notificaciones de bipo al correo electrónico.</string>
    <string name="sr_sttg_title_notificaciones">Notificaciones</string>
    <string name="sr_sttg_description_notificaciones">Recibir las notificaciones de bipo en el celular.</string>
    <string name="sr_title_bicicleta_vista">Bicicleta vista</string>
    <string name="sr_subtitle_donde_viste_bicicleta">¿Donde viste esta bicicleta?</string>
    <string name="sr_txt_agregar_direccion">Agregar dirección</string>
    <string name="sr_cd_icon_googlemaps">Icono GoogleMaps</string>
    <string name="sr_txt_sube_fotos_bicicleta">Sube fotos de la bicicleta</string>
    <string name="sr_txt_como_la_viste">¿Como la viste?</string>
    <string name="sr_txt_agrega_una_descripci_n">Agrega una descripción.</string>
    <string name="sr_btn_enviar">Enviar</string>
    <string name="sr_title_informacion">Información</string>
    <string name="sr_subtitle_acerca_de_bipo">Acerca de bipo</string>
    <string name="sr_subtitle_tutorial">Tutorial</string>
    <string name="sr_txt_bipo_version">Versión: %s</string>
    <string name="sr_txt_bipo_information_app">"La información, imágenes, datos, logotipos, código fuente y demás contenido alojado en la página web www.bipoapp.com como en la aplicación móvil Bipo, pertenece a la Fundación Universitaria Los Libertadores y a sus desarrolladores.
        \nBipo se establece entre los lineamientos y normativas de las leyes colombianas para la protección de datos y las normativas para las redes sociales Facebook®  y Twitter®.
        \nVisita nuestra página para más información sobre los <a href="http://www.bipoapp.com/page/terminos">Términos y Condiciones.</a>
        \nPara contactarnos lo puedes hacer mediante el correo electrónico: contacto@bipoapp.com "</string>
    <string name="sr_cd_bipo_logo">logo bipo</string>
    <string name="sr_cd_boton_panico">Botón de pánico</string>
    <string name="sr_txt_panic_button">Mantén oprimido el botón de pánico para reportar una bicicleta robada.</string>
    <string name="sr_txt_crear_reporte">Crear reporte</string>
    <string name="sr_txt_cambiar_contrasena">Cambiar contraseña</string>
    <string name="sr_title_bicicletas">Bicicletas</string>
    <string name="sr_title_perfil_usuario">Perfil de usuario</string>
    <string name="sr_cd_bicicleta">Bicicleta</string>
    <string name="sr_cd_borrar_bicicleta">Borrar bicicleta</string>
    <string name="sr_cd_bicicleta_default">Bicicleta por default</string>
    <string name="sr_cd_editar">Botón editar</string>
    <string name="sr_btn_registrar_nueva_bicicleta">Registrar una nueva bicicleta</string>
    <string name="sr_title_nuevo_reporte">Nuevo reporte</string>
    <string name="sr_cd_bike_checked">Bicicleta escogida</string>
    <string name="sr_hint_descripcion_reporte">Descripción del reporte.</string>
    <string name="sr_text_tipo_reporte">Tipo de reporte:</string>
    <string name="title_activity_report_bike">ReportBikeActivity</string>
    <string name="sr_menu_action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="sr_title_buscar_reporte">Buscar reportes</string>
    <string name="sr_txt_fecha">Fecha:</string>
    <string name="sr_btn_buscar">Buscar</string>
    <string name="title_activity_nav_menu">NavMenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sr_menu_save_settings">Save settings</string>
    <string name="sr_menu_edit_account">Edit account</string>
    <string name="sr_menu_save_account">Save account</string>
    <string name="sr_menu_search_bikes">Search Bikes</string>
    <string name="sr_cd_reload_icon">Reload page</string>
    <string name="sr_txt_opcional">(Opcional)</string>
    <string name="sr_txt_antigua_contrasena">Antigüa contraseña</string>
    <string name="sr_txt_nueva_contrasena">Nueva contraseña</string>
    <string name="sr_menu_create_report">Crear reporte</string>
    <string name="sr_txt_selecciona_bicicleta">Selecciona una bicicleta.</string>
    <string name="sr_cd_charge">Cargando...</string>
    <string name="sr_cd_previous">Anterior</string>
    <string name="Next">sr_cd_next</string>
    <string name="sr_cd_tuto_bienvenido">Bienvenido</string>
    <string name="sr_txt_es_tu_bicicleta">Es tu bicicleta</string>
</resources>
