<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeItem"
        android:title="@string/sr_menu_home"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/panicButtonItem"
        android:title="@string/sr_menu_boton_panico"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/reportBikesItem"
        android:title="@string/sr_menu_bicicletas_reportadas"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/insecureAreasItem"
        android:title="@string/sr_menu_zonas_inseguras"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/accountItem"
        android:title="@string/sr_menu_perfil"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/infoBipoItem"
        android:title="@string/sr_menu_sobre_bipo"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/logoutItem"
        android:title="@string/sr_menu_cerrar_sesion"
        app:showAsAction="ifRoom"/>
</menu>