<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.register.fragments.PersonalInfoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/gradient_window"
            android:orientation="vertical"
            android:padding="5dp"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/textView4"
                style="@style/titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sr_txt_informacin_personal" />

            <EditText
                android:id="@+id/EtNombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/sr_txt_nombres"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/EtApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/sr_txt_apellidos"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/TvFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="10dp"
                android:text="@string/sr_txt_fecha_de_nacimiento"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/EtNumCelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/sr_txt_numero_celular"
                android:inputType="phone" />

            <EditText
                android:id="@+id/EtCedula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/sr_txt_cedula"
                android:inputType="number" />

            <EditText
                android:id="@+id/EtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/sr_txt_correo"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/EtContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/sr_txt_contrasena"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/EtConfContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/sr_txt_confirmar_contrasena"
                android:inputType="textPassword" />

            <CheckBox
                android:id="@+id/ChbxPoliticaFotos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/sr_txt_acepto_fotos" />

            <CheckBox
                android:id="@+id/ChbxPoliticaTerminos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/sr_txt_acepto_terminos" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/BtnCancel"
                    style="@style/defaultButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:text="@string/sr_btn_cancelar"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button" />

                <Button
                    android:id="@+id/BtNext"
                    style="@style/defaultButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:text="@string/sr_btn_registrar"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
