<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.bipo.javier.bipo.login.activities.LoginActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="60sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/sr_cd_wheel"
        app:srcCompat="@drawable/wheel" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="320dp"
        android:layout_height="345dp"
        android:layout_centerInParent="false"
        android:layout_centerVertical="true"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="105dp"
        android:alpha="0.8"
        android:background="@drawable/gradient_window"
        android:contentDescription="@string/sr_cd_loginwindow"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:layout_centerVertical="true"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="95dp"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="123dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sr_txt_inicio_de_sesion"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/black" />

        <ImageView
            style="@style/divider"
            android:contentDescription="@string/divider" />

        <EditText
            android:id="@+id/EtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sr_txt_correo"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/EtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sr_txt_contrasena"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/TvPassRestauration"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:onClick="goToPassRestauration"
            android:text="@string/sr_txt_olvidaste_tu_contrasena"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <ImageView
            style="@style/divider"
            android:contentDescription="@string/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                style="@style/defaultButton"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:onClick="userRegister"
                android:text="@string/sr_btn_registrate" />

            <Button
                android:id="@+id/button"
                style="@style/defaultButton"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:onClick="getIn"
                android:text="@string/sr_btn_entrar" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/sr_txt_iniciar_con"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <Button
                android:id="@+id/button5"
                style="@style/socialButtons"
                android:layout_weight="33"
                android:background="@color/facebookColor"
                android:drawablePadding="1dp"
                android:drawableStart="@mipmap/ic_facebook"
                android:padding="5dp"
                android:text="@string/sr_btn_facebook"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <Button
                android:id="@+id/button4"
                style="@style/socialButtons"
                android:layout_weight="33"
                android:background="@color/twitterColor"
                android:drawablePadding="1dp"
                android:drawableStart="@mipmap/ic_twitter"
                android:padding="8dp"
                android:text="@string/sr_btn_twitter"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <Button
                android:id="@+id/button3"
                style="@style/socialButtons"
                android:layout_weight="33"
                android:background="@color/googleColor"
                android:drawablePadding="2dp"
                android:drawableStart="@mipmap/ic_google"
                android:padding="5dp"
                android:text="@string/sr_btn_google"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
