<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bipo.javier.bipo.login.activities.PassRestaurationActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="60sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/sr_cd_wheel"
        app:srcCompat="@drawable/wheel" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="320dp"
        android:layout_height="220dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_centerVertical="true"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="105dp"
        android:alpha="0.8"
        android:background="@drawable/gradient_window"
        android:contentDescription="@string/sr_cd_loginwindow"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="123dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sr_txt_olvidaste_tu_contrasena"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <ImageView
            style="@style/divider"
            android:contentDescription="@string/divider" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/sr_txt_restaurarar_contrasena_text"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/EtConfirmCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sr_txt_correo"
            android:inputType="textEmailAddress" />

        <ImageView
            style="@style/divider"
            android:contentDescription="@string/divider" />

        <Button
            android:id="@+id/BtnRestaurar"
            style="@style/defaultButton"
            android:layout_width="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:onClick="passRestauration"
            android:text="@string/sr_btn_restaurar_contrasena"
            tools:ignore="InefficientWeight" />

    </LinearLayout>

</RelativeLayout>
