<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bipo.javier.bipo.home.activities.InfoBipoActivity">

    <include
        android:id="@+id/bipoActionBar"
        layout="@layout/bipo_actionbar" />

    <LinearLayout
        android:id="@+id/LlyInfoContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/bipoActionBar"
        android:orientation="vertical"
        android:padding="5dp"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/textView10"
            style="@style/titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sr_title_informacion" />

        <ImageView
            android:id="@+id/imageView6"
            style="@style/divider"
            android:layout_height="2dp"
            android:background="@android:color/black"
            android:contentDescription="@string/divider" />

        <TextView
            android:id="@+id/TvBipoInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/sr_subtitle_acerca_de_bipo"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView7"
            style="@style/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"
            android:contentDescription="@string/divider" />

        <TextView
            android:id="@+id/TvTutorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/sr_subtitle_tutorial"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView8"
            style="@style/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"
            android:contentDescription="@string/divider" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RlyInfoContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bipoActionBar">

    </RelativeLayout>

</RelativeLayout>
